# kryptocd

kryptocd/doc/: Backup_method.txt  use_case_Create_backup.txt  use_cases.txt
kryptocd/research/gpg-size/: check_gpg_size.cc  conclusion.txt  sizes
kryptocd/source/: .cvsignore  Makefile  archive_bz2_compressor.cc  archive_bz2_compressor.hh  archive_bz2_inflator.cc  archive_bz2_inflator.hh  archive_gpg_encrypter.cc  archive_gpg_encrypter.hh  archive_tar_creator.cc  archive_tar_creator.hh  test_archive_tar_creator.cc  test_encrypted_compressed_tar_archive.cc  utils_childprocess.cc  utils_childprocess.hh  utils_pipe.cc  utils_pipe.hh  utils_thread.cc  utils_thread.hh
kryptocd/source/UML/: archive.uml.ps  archive_operators.ps  communivation.ps  image_creators.ps  image_handlers.ps  kernel_workings.ps  vorgehensweise_working.ps
kryptocd/source/kernel/: .cvsignore  Makefile  archive_creator.cpp  archive_creator.hh  archive_lister.cpp  archive_lister.hh  bz2_compressor.cpp  bz2_compressor.hh  bz2_inflator.cpp  bz2_inflator.hh  bzip2.cpp  bzip2.hh  child_filter.cpp  child_filter.hh  childprocess.cpp  childprocess.hh  diskspace.cpp  diskspace.hh  fsink.cpp  fsink.hh  fsource.cpp  fsource.hh  gpg.cpp  gpg.hh  gpg_encrypter.cpp  gpg_encrypter.hh  image.cpp  image.hh  image_info.cpp  image_info.hh  image_single_file.cpp  image_single_file.hh  io_pump.cpp  io_pump.hh  pipe.cpp  pipe.hh  sink.cpp  sink.hh  source.cpp  source.hh  (+9 more)
src/: Berlios  Makefile.am  Makefile.in  Projekt  README  cvs-start  data.h  gui.ui  index.html  kryptocd.cpp  kryptocd.desktop  kryptocd.h  main.cpp
src/html/: Data.ps  development-de.html  development.html  index-de.html  index.html
src/src/: data.cpp
